--- a/pages/Home.html
+++ b/pages/Home.html
@@ -22,7 +22,7 @@
     <meta name="twitter:description" content="Comprehensive Internet Management Solutions, Wifi Hotspot Software & Network Management Software for optimizing your network. Improve performance, enhance security, and reduce costs." />
 
     <!-- Favicon - Updated to match logo color -->
-    <link rel="icon" href="https://placehold.co/270x270/0058E6/ffffff?text=GI" type="image/png">
+    <link rel="icon" href="../assets/Favicon/logo.png" type="image/png">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -185,10 +185,10 @@
     <header class="bg-background-white text-dark-text py-4 shadow-md sticky top-0 z-50 rounded-b-lg">
         <div class="container mx-auto flex justify-between items-center px-4">
             <!-- Logo -->
-            <a href="#" class="flex items-center space-x-2">
-                <img src="https://placehold.co/50x50/0058E6/ffffff?text=GI" alt="Globetek Infoway Logo" class="w-12 h-12 rounded-full">
-                <span class="text-2xl font-bold text-dark-text">GLOBETEK <span class="block text-sm font-normal -mt-1">INFOWAY</span></span>
-            </a>
+            <!-- Logo -->
+        <a href="#" class="flex items-center">
+            <img src="../assets/Header & Footer logo/Nav logo.png" alt="Globetek Infoway Logo" class="h-12">
+        </a>
 
             <!-- Navigation - Desktop -->
             <nav class="hidden md:flex items-center space-x-6">
@@ -229,51 +229,186 @@
         </div>
     </header>
 
-    <main>
-        <!-- Hero Section -->
-        <section id="home" class="hero-background text-white py-20 px-4 md:px-8 flex items-center justify-center min-h-[calc(100vh-80px)] rounded-b-xl shadow-lg relative">
-            <div class="text-center md:text-left max-w-4xl space-y-6 z-10">
-                <p class="text-lg md:text-xl font-semibold uppercase text-primary-blue mb-2 fade-in-up">
-                    24ONLINE SINGLE PLATFORM, MULTIPLE SOLUTIONS
-                </p>
-                <h1 class="text-4xl md:text-6xl font-bold leading-tight drop-shadow-lg fade-in-up">
-                    Your All-in-One Solution for Internet Management
-                </h1>
-                <p class="text-lg md:text-xl opacity-90 fade-in-up" style="transition-delay: 0.2s;">
-                    Empowering Telcos, ISPs, satellite providers, hotels, hospitals, universities, cafes, enterprises, banks, airports, malls, and smart cities with a comprehensive AAA, Access Gateway, Captive Portal, OSS/BSS-CRM, Subscriber Management, and more to support diverse networks.
-                </p>
-                <div class="space-x-4 pt-4 fade-in-up" style="transition-delay: 0.4s;">
-                     <a href="#solutions" class="bg-primary-red text-white font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-light-red hover:text-primary-red transition duration-300 transform hover:scale-105">
-                        DISCOVER OUR SOLUTION
-                    </a>
-                </div>
-            </div>
+    <!-- Hero Section -->
+     <!-- Hero Section -->
+<section class="relative bg-cover bg-center min-h-screen text-white" style="background-image: url('../assets/Home page/Hero home.jpg');">
+    <div class="absolute inset-0 bg-black bg-opacity-70"></div> <!-- Dark overlay -->
+    <div class="relative z-10 container mx-auto px-6 py-20 flex flex-col justify-center min-h-screen">
+        <h2 class="text-sm font-semibold tracking-widest uppercase text-gray-300">24ONLINE – SINGLE PLATFORM, MULTIPLE SOLUTIONS</h2>
+        <h1 class="text-5xl md:text-6xl font-bold leading-tight mb-6 mt-2">
+            Your All-in-One<br />Solution for Internet<br/> Management
+        </h1>
+        <div>
+            <p class="text-lg md:text-xl max-w-2xl mb-8 text-gray-300">
+                Empowering Telcos, ISPs, satellite providers, hotels, hospitals, universities, cafes, enterprises, banks, airports, malls, and smart cities with a comprehensive AAA, Access Gateway, Captive Portal, OSS/BSS-CRM, Subscriber Management, and more to support diverse networks.
+            </p>
+        </div>
+       <img src="../assets/Home page/structure.png" alt="Benefits Image" style="width: 100%;" class="max-w-3xl mr-auto mb-7">
+        <div>
+               <a href="#solns" class="inline-block bg-red-600 hover:bg-red-700 text-white text-base font-semibold uppercase rounded-lg px-8 py-3 shadow-md transition-all duration-300 tracking-wide">
+           Discover our solution
+           </a>
+        </div>
+    </div>
+  
+</section>
+<section style="display: flex; justify-content: space-between; align-items: flex-start; padding: 60px 5%; font-family: 'Inter', sans-serif; gap: 40px;">
+  <div style="max-width: 50%;">
+    <p style="color: #b10000; font-weight: 700; margin-bottom: 10px; text-transform: uppercase;">WHO WE ARE</p>
+    <h1 style="font-size: 2.5rem; font-weight: 700; margin: 0 0 20px;">
+      We are leading in internet<br>access management
+    </h1>
+    <p style="font-size: 1rem; color: #555; line-height: 1.6; margin-bottom: 15px;">
+      Globetek Infoway understands that each business has unique requirements when it comes to managing Internet access.
+      Whether you’re in the hospitality industry, education sector, healthcare, or corporate enterprise, our tailored solutions
+      ensure that your specific needs are met.
+    </p>
+    <p style="font-size: 1rem; color: #555; line-height: 1.6; margin-bottom: 20px;">
+      Our product, <strong>24ONLINE</strong>, is designed to streamline and optimize Internet usage, providing robust features that support your business goals.
+    </p>
+    <a href="#" style="display: inline-block; background: #b10000; color: white; padding: 12px 20px; text-decoration: none; font-weight: bold; border-radius: 4px;">
+      DISCOVER MORE
+    </a>
+  </div>
 
-            <!-- Logos at the bottom-left -->
-            <div class="absolute bottom-10 left-10 flex flex-col items-start space-y-4 md:flex-row md:space-y-0 md:space-x-8 z-10">
-                <div class="flex items-center space-x-2">
-                    <img src="https://placehold.co/30x30/0058E6/ffffff?text=GI" alt="Globetek Logo" class="w-8 h-8 rounded-full">
-                    <span class="text-white text-lg font-semibold">GLOBETEK</span>
-                </div>
-                <div class="flex items-center space-x-2">
-                    <img src="https://placehold.co/30x30/0058E6/ffffff?text=GI" alt="Globetek Infoway Ventures Logo" class="w-8 h-8 rounded-full">
-                    <span class="text-white text-sm">Globetek Infoway Ventures Pvt. Ltd.</span>
-                </div>
-                <div class="flex items-center space-x-2">
-                    <img src="https://placehold.co/30x30/0058E6/ffffff?text=GI" alt="Globetek Infoway Singapore Logo" class="w-8 h-8 rounded-full">
-                    <span class="text-white text-sm">Globetek Infoway (Singapore) Pte Ltd.</span>
-                </div>
-                 <div class="flex items-center space-x-2">
-                    <img src="https://placehold.co/30x30/FFFFFF/0058E6?text=24" alt="24Online Logo" class="w-8 h-8 rounded-full">
-                    <span class="text-white text-lg font-semibold">24ONLINE</span>
-                </div>
-            </div>
+  <div style="position: relative; max-width: 50%;">
+    <div style="position: relative; display: inline-block;">
+      <img src="../assets/Home page/girl-min (1).png" alt="Representative" style="width: 100%; max-width: 320px; border-radius: 8px;"/>
+      <div style="position: absolute; bottom: -20px; right: -20px; background: white; padding: 10px 14px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); font-size: 0.9rem;">
+        <strong>Subscribers</strong><br>4.5M+
+      </div>
+    </div>
+</section>
+<section class="text-center py-20 px-5 font-inter bg-white relative overflow-hidden">
+  <div class="relative z-[1] max-w-[1200px] mx-auto">
+    <h2 class="text-[2.8rem] text-[#b10000] font-extrabold mb-4">5500+</h2>
+    <p class="text-[1.3rem] font-bold mb-10">
+      Deployments from all around the world trust<br>on our product - <span class="font-extrabold">24Online</span>
+    </p>
 
-            <!-- Scroll Down Arrow -->
-            <a href="#solutions" class="scroll-down-arrow z-10">
-                <i class="fas fa-chevron-down"></i>
-            </a>
-        </section>
+    <!-- Marquee Logos -->
+    <div class="w-full overflow-hidden mb-12 h-[60px]">
+      <div class="flex gap-14 animate-marquee items-center w-max">
+         <img src="../assets/Home page/Client logo/Enterprise/image 2327.png" alt="Logo1" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2318.png" alt="Logo2" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2319.png" alt="Logo3" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2320.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2321.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2322.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2304.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2305.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2306.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2307.png" alt="Logo4" style="height: 40px;">
+       <img src="../assets/Home page/Client logo/Hotel/image 2308.png" alt="Logo1" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2309.png" alt="Logo2" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2296.png" alt="Logo3" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2297.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2298.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2299.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2299.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2301.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2303.png" alt="Logo4" style="height: 40px;">
+        <!-- Duplicate Logos -->
+         <img src="../assets/Home page/Client logo/Enterprise/image 2327.png" alt="Logo1" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2318.png" alt="Logo2" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2319.png" alt="Logo3" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2320.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2321.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hospitals/image 2322.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2304.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2305.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2306.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2307.png" alt="Logo4" style="height: 40px;">
+       <img src="../assets/Home page/Client logo/Hotel/image 2308.png" alt="Logo1" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/Hotel/image 2309.png" alt="Logo2" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2296.png" alt="Logo3" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2297.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2298.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2299.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2299.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2301.png" alt="Logo4" style="height: 40px;">
+      <img src="../assets/Home page/Client logo/ISP/image 2303.png" alt="Logo4" style="height: 40px;">
+      </div>
+    </div>
+
+    <!-- Stats Section -->
+    <div class="flex justify-center flex-wrap gap-14 mb-10">
+      <div>
+        <h3 class="text-[#b10000] text-[1.8rem] font-extrabold mb-1">100+</h3>
+        <p class="text-base font-bold m-0">Countries</p>
+      </div>
+      <div>
+        <h3 class="text-[#b10000] text-[1.8rem] font-extrabold mb-1">4.5M+</h3>
+        <p class="text-base font-bold m-0">Subscribers</p>
+      </div>
+      <div>
+        <h3 class="text-[#b10000] text-[1.8rem] font-extrabold mb-1">250+</h3>
+        <p class="text-base font-bold m-0">Channel Partners</p>
+      </div>
+    </div>
+
+    <!-- Integration Section -->
+    <p class="text-[#b10000] text-sm">DIVERSE INTEGRATION</p>
+    <h4 class="text-[1.4rem] font-extrabold mb-2">3rd party integrations</h4>
+    <p class="text-[0.95rem] font-semibold text-[#444] max-w-[700px] mx-auto mb-12">
+      24Online RADIUS is well integrated with major 3rd party BBRAS/BNG/DPI/Access Gateway/NAS as well as Wi-Fi Access Points/Wireless Controllers.
+    </p>
+  </div>
+
+  <!-- Bottom Marquee -->
+  <div class="w-full overflow-hidden h-[60px]">
+    <div class="flex gap-14 animate-marquee-slow items-center w-max">
+      <img src="logo1.png" alt="logo1" class="h-10" />
+      <img src="logo2.png" alt="logo2" class="h-10" />
+      <img src="logo3.png" alt="logo3" class="h-10" />
+      <img src="logo4.png" alt="logo4" class="h-10" />
+      <img src="logo5.png" alt="logo5" class="h-10" />
+      <!-- Duplicate for loop -->
+      <img src="logo1.png" alt="logo1" class="h-10" />
+      <img src="logo2.png" alt="logo2" class="h-10" />
+      <img src="logo3.png" alt="logo3" class="h-10" />
+    </div>
+  </div>
+
+  <!-- Tailwind Custom Animation -->
+  <style>
+    @tailwind base;
+    @tailwind components;
+    @tailwind utilities;
+
+    @layer utilities {
+      @keyframes marquee {
+        0% {
+          transform: translateX(0%);
+        }
+        100% {
+          transform: translateX(-50%);
+        }
+      }
+      @keyframes marquee-slow {
+        0% {
+          transform: translateX(0%);
+        }
+        100% {
+          transform: translateX(-50%);
+        }
+      }
+
+      .animate-marquee {
+        animation: marquee 25s linear infinite;
+      }
+
+      .animate-marquee-slow {
+        animation: marquee-slow 30s linear infinite;
+      }
+
+      .font-inter {
+        font-family: 'Inter', sans-serif;
+      }
+    }
+  </style>
+</section>
+
 
         <!-- Solutions Section -->
         <section id="solutions" class="py-16 px-4 md:px-8 bg-gray-50">
